Contact Section Revisions

--- a/DSM1/index.html
+++ b/DSM1/index.html
@@ -518,17 +518,18 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
+            <h4>Contact</h4>
+            <p>
+              PT. DINAMIKA SMARK MAXIMA <br>
+              Sequis Tower, 17th Floor Suite 9, Jl. Jend. Sudirman No.Kav. 71, Jakarta,
+              Indonesia
+              12190</p>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="footer-top">
+    <!--<div class="footer-top">
       <div class="container">
         <div class="row">
 
@@ -575,7 +576,7 @@
 
         </div>
       </div>
-    </div>
+    </div>-->
 
     <div class="container py-4">
       <div class="copyright">
