--- a/DSM1/index.html
+++ b/DSM1/index.html
@@ -38,6 +38,10 @@
     -webkit-mask-image: linear-gradient(to bottom left, black 15%, transparent);
   mask-image: linear-gradient(to bottom left, black, transparent);
   }
+
+  .test{
+    display: inline-block;
+  }
 </style>
 </head>
 
@@ -49,7 +53,8 @@
 
       <div class="logo">
         <a href="index.html">
-          <img src="assets/img/Smark_4.png" alt="" class="img-fluid">
+          <img src="assets/img/Smark_15.png" alt="" class="img-fluid">
+          <h4 class="test" style=color:#3887c1>DINAMIKA <span style=color:#f59f2e>SMARK</span> MAXIMA</h4>
           <!--<h1 class="d-flex align-items-center" style=color:#3887c1>D<span style=color:#f59f2e>S</span>M</h1>-->
         </a>
         <!-- Uncomment below if you prefer to use an image logo -->
