--- a/DSM1/index.html
+++ b/DSM1/index.html
@@ -108,7 +108,6 @@
             <div class="swiper-slide">Slide 1</div>
             <div class="swiper-slide">Slide 2</div>
             <div class="swiper-slide">Slide 3</div>
-            ...
           </div>
           <!-- If we need pagination -->
           <div class="swiper-pagination"></div>
@@ -117,8 +116,8 @@
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
         
-          <!-- If we need scrollbar -->
-          <div class="swiper-scrollbar"></div>
+          <!-- If we need scrollbar 
+          <div class="swiper-scrollbar"></div> -->
         </div>
       
         </div>
