--- a/DSM1/index.html
+++ b/DSM1/index.html
@@ -105,7 +105,7 @@
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide"><img src="assets/img/Smark_16.png" class="img-fluid"></div>
+            <div class="swiper-slide"><img src="assets/img/Smark_16.png"></div>
             <div class="swiper-slide">Slide 2</div>
             <div class="swiper-slide">Slide 3</div>
           </div>
